Fix spacing for friend tiles

--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -57,7 +57,7 @@
 }
 
 .profile-page .left-section {
-  width: 50%;
+  width: 40%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -81,6 +81,7 @@
 .profile-page .left-section .friend-tiles {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .profile-page .friend {
